# mcp-log-analyzer-server

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  create_image_and_launch.sh  main.py
client/: agent.py  interface.py
mcp_server/: Dockerfile  decorators.py  requirements.txt  server.py
webapp/: Dockerfile  manage.py  requirements.txt
webapp/client/: agent.py
webapp/client_webapp/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
webapp/client_webapp/migrations/: 0001_initial.py  0002_alter_providermodel_base_url.py  0003_remove_providermodel_id_and_more.py  0004_alter_providermodel_base_url.py  0005_alter_providermodel_model_name.py  0006_selectionparam.py  0007_remove_providermodel_is_active_and_more.py  0008_mcpserverconfig_and_more.py  0009_alter_mcpserverconfig_connection_type.py  0010_providermodel_is_active_delete_selectionparam.py  0011_alter_providermodel_is_active.py  0012_alter_providermodel_is_active.py  0013_alter_providermodel_is_active.py
webapp/client_webapp/templates/client_webapp/: index.html
webapp/log_analyzer_site/: asgi.py  settings.py  urls.py  wsgi.py
webapp/static/admin/: admin_site.css
webapp/templates/admin/: app_index.html  base_site.html  change_form.html  change_list.html  index.html  login.html
